--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,11 @@ nav a
     object-fit: contain;
     object-position: center -300px;
 }
+#img-header
+{
+    object-fit: cover;
+    object-position: center;
+}
 main
 {
     width: 100%;
